# Socially_Backend

./: .gitignore  Dockerfile  README.md  Test Cases.xlsx  build.sh  docker-compose.yml  requirements.txt
socially_backend/: build.sh  db.sqlite3  manage.py  requirements.txt
socially_backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
socially_backend/api/migrations/: 0001_initial.py  0002_post_like.py  0003_comment.py  0004_profile.py  0005_alter_profile_follower_alter_profile_following.py  0006_alter_profile_follower_alter_profile_following.py  0007_alter_profile_follower_alter_profile_following_and_more.py  0008_remove_profile_follower_remove_profile_following_and_more.py
socially_backend/socially_api/: apps.py  models.py  serializers.py  views.py
socially_backend/socially_api/migrations/: 0001_initial.py  0002_post_image.py
socially_backend/socially_backend/: asgi.py  settings.py  urls.py  wsgi.py
socialmedia/: pyproject.toml
